# jackal-serial

./: Dockerfile  README.md  build.bash  entrypoint.bash  run-dev.bash  run.bash
jackal-bridge/: CMakeLists.txt  package.xml
jackal-bridge/include/jackal_bridge/: bridge_sender.hpp
jackal-bridge/src/: bridge_node.cpp  bridge_sender.cpp
jackal-control/: CMakeLists.txt  package.xml
jackal-control/config/: control.yaml
jackal-control/launch/: control.launch.py  description.launch.py
jackal-description/: CMakeLists.txt  package.xml
jackal-description/urdf/: jackal.ros2_control.xacro  jackal.urdf.xacro
jackal-launch/: CMakeLists.txt  package.xml
jackal-launch/launch/: jackal.composition.launch.py
jackal-serial/: CMakeLists.txt  package.xml
jackal-serial/include/jackal_serial/core/: drive.hpp  packets.hpp  serial.hpp  serializer.hpp
jackal-serial/include/jackal_serial/ros/: conversions.hpp  jackal_serial_node.hpp
jackal-serial/launch/: jackal-serial.launch.py
jackal-serial/ros/: conversions.cpp  jackal_serial_node.cpp  node.cpp
jackal-serial/src/: drive.cpp  packets.cpp  serial.cpp  serializer.cpp
jackal-serial/test/: test_connection.cpp  test_conversions.cpp  test_packet.cpp  test_serial.cpp  test_serialization.cpp
jackal-teleop/: CMakeLists.txt  README.md  package.xml
jackal-teleop/launch/: jackal_teleop.launch.py
jackal-teleop/src/: jackal_teleop.cpp  jeti_joy.cpp
service/: jackal.service
