<?xml version="1.0"?>
<package format="3">
  <name>jackal_teleop</name>
  <version>0.1.0</version>
  <description>Teleoperation and joystick interface for Jackal (ROS 2 Jazzy)</description>
  <maintainer email="shenbax@seas.upenn.edu">Shenbagaraj Kannapiran</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
